cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project (pythia6_examples)
enable_language (Fortran)

#---Compilation and Link options----------------------------------------------
if(CMAKE_SYSTEM_NAME MATCHES Darwin)
  set(CMAKE_SHARED_LIBRARY_CREATE_Fortran_FLAGS "${CMAKE_SHARED_LIBRARY_CREATE_Fortran_FLAGS} -flat_namespace -single_module -undefined dynamic_lookup")
endif()

set(CMAKE_Fortran_FLAGS                "")
set(CMAKE_Fortran_FLAGS_DEBUG          "-g")
set(CMAKE_Fortran_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
set(CMAKE_Fortran_FLAGS_RELEASE        "-O2 -DNDEBUG")
set(CMAKE_Fortran_FLAGS_RELWITHDEBINFO "-O2 -g")

if(NOT DEFINED MYPYTHIA6PATH)
 set(MYPYTHIA6PATH ${pythia6_examples_SOURCE_DIR}/..)
endif(NOT DEFINED MYPYTHIA6PATH)

include_directories (${MYPYTHIA6PATH}/include)
link_directories (${MYPYTHIA6PATH}/lib/archive)

add_executable(main61 main61.f)
target_link_libraries(main61 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main62 main62.f)
target_link_libraries(main62 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main63 main63.f)
target_link_libraries(main63 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main64 main64.f)
target_link_libraries(main64 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main65 main65.f)
target_link_libraries(main65 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main66 main66.f)
target_link_libraries(main66 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main67 main67.f)
target_link_libraries(main67 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main68 main68.f)
target_link_libraries(main68 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main69 main69.f)
target_link_libraries(main69 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main70 main70.f)
target_link_libraries(main70 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main71 main71.f)
target_link_libraries(main71 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main72 main72.f)
target_link_libraries(main72 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main76 main76.f)
target_link_libraries(main76 pythia6 pythia6_dummy pythia6_pdfdummy)
add_executable(main77 main77.f)
target_link_libraries(main77 pythia6 pythia6_dummy pythia6_pdfdummy)

if(DEFINED MYHEPMCPATH)
  include_directories (${MYHEPMCPATH}/include)
  link_directories (${MYHEPMCPATH}/lib)
# a trick to compile with fortran libraries: empty file dum.f
  add_executable(main78 main78.cc dum.f)
  target_link_libraries(main78 pythia6 pythia6_dummy pythia6_pdfdummy HepMC HepMCfio)
  add_executable(main79 main79.cc dum.f)
  target_link_libraries(main79 pythia6 pythia6_dummy pythia6_pdfdummy HepMC HepMCfio)
endif(DEFINED MYHEPMCPATH)

if(DEFINED MYLHAPDFPATH)
  link_directories (${MYLHAPDFPATH})
  add_executable(main81 main81.f)
  target_link_libraries(main81 pythia6 pythia6_dummy LHAPDF)
endif(DEFINED MYLHAPDFPATH)
